--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <section class="resposi">
                 <div class="container">
                     <div class="row">
-                            <div class="col-7  col-reposive-left">
+                            <div class="col-7 col-reposive  col-reposive-left">
                                 <div class="resposi-img">
                                     <img src="./image/img3.png" alt>
                                 </div>
                                 </div>
-                            <div class="col-5 col-reposive-right">
+                            <div class="col-5 col-reposive col-reposive-right">
                                 <div class="resposi-content">
                                     <div class="resposi-title">NEW DESIGN</div>
                                     <h4 class="resposi-desc">Resposive design, just
@@ -176,7 +176,7 @@
             <section class="user">
                     <div class="container">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-4 col-user">
                                 <div class="user-wrap">
                                     <div class="user-img">
                                          <img src="./image/user.png" alt="">
@@ -186,7 +186,7 @@
                                     <p class="user-text">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-4 col-user">
                                 <div class="user-wrap">
                                     <div class="user-img">
                                         <img src="./image/user.png" alt="">
@@ -196,7 +196,7 @@
                                    <p class="user-text">“Pellentesque ornare sem lacinia quam. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn”</p>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-4 col-user">
                                 <div class="user-wrap">
                                     <div class="user-img">
                                     <img src="./image/user.png" alt="">
@@ -240,7 +240,6 @@
                     <h3 class="over-title">
                         Over 1000 designers are using ...
                     </h3>
-                    <!-- <div class="over-content"> -->
                     <div class="over-days">
                           <img src="./image/muiten.png" alt="" class="over-image">
                           <a href="#" class="over-text">30 days free trial for all.</a>
@@ -257,44 +256,6 @@
                     </p>
                 </div>
             </section>
-            <!-- <section class="over">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="over-wrap">
-                                <div class="over-header">
-                                    <h5 class="over-sub-title">
-                                        NEW FEATURES
-                                    </h5>
-                                    <h3 class="over-title">
-                                        Over 1000 designers are using ...
-                                    </h3>
-                                </div>
-                              
-                                <div class="over-body">
-                                    <form class="over-from">
-                                        <input type="text" class="over-input" placeholder="FULL NAME">
-                                        <input type="text" class="over-input" placeholder="YOUR EMAIL">
-                                        <input type="text" class="over-input" placeholder="PASSWORD">
-                                    </form>
-                                    <div class="over-img">
-                                        <div class="over-icon">
-                                            <img src="./image/muiten.png" class="over-image" alt="">
-                                            <div class="over-day">30 days free trial for all.</div>
-                                        </div>
-                                        <a href="#" class="over-img-link"> TRY NOW</a>
-                                    </div>
-                                 </div>
-                                <div class="over-footer">
-                                    <p>
-                                        By Signing up you agree to our <a href="#" class="over-link">terms & Services.</a> 
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
         </div>
         <!-- Phần footer -->
         <footer class="footer">
