--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                     <div class="row">
                         <div class="col-7 design-col-left">
                             <div class="design-left">
-                                <div class="design-title">NEW DESIGN</div>
+                                <h3 class="design-title">NEW DESIGN</h3>
                                 <h4 class="design-desc">There is no other
                                     platforms for you as like <span
-                                        class="design-dots">....</span></h1></h4>
+                                        class="design-dots">....</span></h4>
                             <div class="design-text">
                                 <p >Aenean eu leo quam.
                                     Pellentesque ornare sem lacinia quam venenatis
@@ -88,7 +88,7 @@
                         <div class="col-12">
                             <div class="feature-wrapper">
                                 <div class="feature-header">
-                                <h4 class="feature-heading">NEW FEATURE</h4>
+                                <div class="feature-heading">NEW FEATURE</div>
                                 <h2 class="feature-title"> Some awesone features</h2>
                                 </div>
                                 <div class="feature-content">
@@ -154,10 +154,10 @@
                                 <div class="resposi-img">
                                     <img src="./image/img3.png" alt>
                                 </div>
-                                </div>
+                            </div>
                             <div class="col-5 col-reposive col-reposive-right">
                                 <div class="resposi-content">
-                                    <div class="resposi-title">NEW DESIGN</div>
+                                    <h3 class="resposi-title">NEW DESIGN</h3>
                                     <h4 class="resposi-desc">Resposive design, just
                                     need your tap <span class="resposi-dots">....</span></h1></h4>
                                     <p class="design-text">Aenean eu leo quam.
@@ -234,9 +234,9 @@
             </section>
             <section class="over">
                 <div class="container">
-                    <h5 class="over-sub-title">
+                    <div class="over-sub-title">
                         NEW FEATURES
-                    </h5>
+                    </div>
                     <h3 class="over-title">
                         Over 1000 designers are using ...
                     </h3>
